ALEPH-10 Config/warning tidy up

--- a/aleph2_data_import_manager/example_config_files/v1_sync_service.properties
+++ b/aleph2_data_import_manager/example_config_files/v1_sync_service.properties
@@ -15,7 +15,7 @@ MongoDbManagementDbService.mongodb_connection=localhost:27017
 MongoDbManagementDbService.v1_enabled=true
 # SEARCH INDEX
 ElasticsearchCrudService.elasticsearch_connection=localhost:9300
-# DATA IMPORT LAYER:
+# DATA IMPORT MANAGER:
 DataImportManager.harvest_enabled=true
 DataImportManager.streaming_enrichment_enabled=true
 DataImportManager.batch_enrichment_enabled=false
