--- a/aleph2_data_import_manager/example_config_files/v1_sync_service_eclipse.properties
+++ b/aleph2_data_import_manager/example_config_files/v1_sync_service_eclipse.properties
@@ -13,11 +13,11 @@ service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearc
 # MANAGEMENT DB:
 MongoDbManagementDbService.mongodb_connection=localhost:4017
 MongoDbManagementDbService.v1_enabled=true
-#Globals:
-globals.local_cached_jar_dir=C:\\opt\\aleph2-home\\cached-jars\\
-#globals.local_cached_jar_dir=C:\\Users\\$USERNAME\\AppData\\Local\\Temp\\
 # DATA IMPORT MANAGER:
 DataImportManager.harvest_enabled=true
 DataImportManager.streaming_enrichment_enabled=true
 DataImportManager.batch_enrichment_enabled=false
 DataImportManager.storm_debug_mode=true
+# GLOBALS (for running locally):
+globals.local_cached_jar_dir=C:\\opt\\aleph2-home\\cached-jars\\
+#globals.local_cached_jar_dir=C:\\Users\\$USERNAME\\AppData\\Local\\Temp\\
