ALEPH-19 Improved distributed cluster handling + workaround for akka cluster restart problems

--- a/aleph2_data_import_manager/example_config_files/v1_sync_service.properties
+++ b/aleph2_data_import_manager/example_config_files/v1_sync_service.properties
@@ -1,6 +1,6 @@
 # SERVICES
 service.CoreDistributedServices.interface=com.ikanow.aleph2.distributed_services.services.ICoreDistributedServices
-service.CoreDistributedServices.service=com.ikanow.aleph2.distributed_services.services.MockCoreDistributedServices
+service.CoreDistributedServices.service=com.ikanow.aleph2.distributed_services.services.CoreDistributedServices
 service.StorageService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IStorageService
 service.StorageService.service=com.ikanow.aleph2.storage_service_hdfs.services.HDFSStorageService
 service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
@@ -9,14 +9,20 @@ service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interface
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
 service.SearchIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.ISearchIndexService
 service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.ElasticsearchIndexService
+
 # CONFIG
+
 # MANAGEMENT DB:
 MongoDbManagementDbService.mongodb_connection=localhost:27017
 MongoDbManagementDbService.v1_enabled=true
+
 # SEARCH INDEX
 ElasticsearchCrudService.elasticsearch_connection=localhost:9300
+
+# CORE DISTRIBUTED SERVICES
+CoreDistributedServices.application_name=DataImportManager
+
 # DATA IMPORT MANAGER:
 DataImportManager.harvest_enabled=true
 DataImportManager.streaming_enrichment_enabled=true
 DataImportManager.batch_enrichment_enabled=false
-
