--- a/aleph2_streaming_enrichment_context_library/example_config_files/context_local_test.properties
+++ b/aleph2_streaming_enrichment_context_library/example_config_files/context_local_test.properties
@@ -21,3 +21,5 @@ globals.local_cached_jar_dir=file://temp/
 MongoDbManagementDbService.mongodb_connection=localhost:9999
 # Full Search index service if enabled
 #ElasticsearchCrudService.elasticsearch_connection=localhost:4093
+# For testing
+CoreDistributedServices.application_name="test"
