--- a/aleph2_harvest_context_library/example_config_files/harvest_local_test.properties
+++ b/aleph2_harvest_context_library/example_config_files/harvest_local_test.properties
@@ -16,3 +16,5 @@ service.test.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoD
 globals.local_cached_jar_dir=file://temp/
 # MANAGEMENT DB: (note: dummy port)
 MongoDbManagementDbService.mongodb_connection=localhost:9999
+# For testing
+CoreDistributedServices.application_name="test"
