ALEPH-19 Removed a few cases where unnecessary initialization was being performed in the harvester

--- a/aleph2_harvest_context_library/example_config_files/harvest_local_test.properties
+++ b/aleph2_harvest_context_library/example_config_files/harvest_local_test.properties
@@ -16,5 +16,7 @@ service.test.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoD
 globals.local_cached_jar_dir=file://temp/
 # MANAGEMENT DB: (note: dummy port)
 MongoDbManagementDbService.mongodb_connection=localhost:9999
+# For testing - should be removed
+MongoDbManagementDbService.v1_enabled=true
 # For testing
 CoreDistributedServices.application_name="test"
