--- a/aleph2_streaming_enrichment_context_library/example_config_files/context_local_test.properties
+++ b/aleph2_streaming_enrichment_context_library/example_config_files/context_local_test.properties
@@ -19,6 +19,8 @@ service.test.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoD
 globals.local_cached_jar_dir=file://temp/
 # MANAGEMENT DB: (note: dummy port)
 MongoDbManagementDbService.mongodb_connection=localhost:9999
+# For testing - should be removed
+MongoDbManagementDbService.v1_enabled=true
 # Full Search index service if enabled
 #ElasticsearchCrudService.elasticsearch_connection=localhost:4093
 # For testing
