--- a/aleph2_streaming_enrichment_context_library/pom.xml
+++ b/aleph2_streaming_enrichment_context_library/pom.xml
@@ -211,5 +211,11 @@
                 </exclusion>
             </exclusions>
 </dependency>
+<dependency>
+	<groupId>org.slf4j</groupId>
+	<artifactId>log4j-over-slf4j</artifactId>
+	<version>1.7.12</version>
+</dependency>
+
 	</dependencies>
 </project>
