ALEPH-19 Can now force named applications to specific ports for akka clustering

--- a/aleph2_data_import_manager/example_config_files/v1_sync_service.properties
+++ b/aleph2_data_import_manager/example_config_files/v1_sync_service.properties
@@ -21,6 +21,7 @@ ElasticsearchCrudService.elasticsearch_connection=localhost:9300
 
 # CORE DISTRIBUTED SERVICES
 CoreDistributedServices.application_name=DataImportManager
+CoreDistributedServices.application_port.DataImportManager=2552
 
 # DATA IMPORT MANAGER:
 DataImportManager.harvest_enabled=true
