ALEPH-3 Fixed bug in time UUID utils - now guaranteed unique! (3.2 version wasn't thread safe, moved to github fork that is on maven and at 3.4, which is identical but replaces a long with an AtomicLong)

--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -206,9 +206,9 @@
   		<version>2.7.1</version>
   	</dependency>
   	<dependency>
-  		<groupId>com.eaio.uuid</groupId>
+  		<groupId>com.github.stephenc.eaio-uuid</groupId>
   		<artifactId>uuid</artifactId>
-  		<version>3.2</version>
+  		<version>3.4.0</version>
   	</dependency>
   	<!-- 
   	<dependency>
