Added context signature to hadoop configuration as parameter.

--- a/aleph2_data_import_manager/test/test_data_import_manager.properties
+++ b/aleph2_data_import_manager/test/test_data_import_manager.properties
@@ -7,6 +7,8 @@ service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.da
 service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
 service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
+service.SearchIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.ISearchIndexService
+service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.MockElasticsearchIndexService
 # CONFIG
 # GLOBALS:
 #(insert these by hand)
