ALEPH-25 Unpleasant workaround for MCDS not taking app name from config - added extra check in management db actor context before creating spurious singletons

--- a/aleph2_management_db_service/test/com/ikanow/aleph2/management_db/controllers/actors/actor_test.properties
+++ b/aleph2_management_db_service/test/com/ikanow/aleph2/management_db/controllers/actors/actor_test.properties
@@ -12,4 +12,4 @@ service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services
 
 # CONFIG
 # For testing
-CoreDistributedServices.application_name="DataImportManager"
+CoreDistributedServices.application_name=DataImportManager
