--- a/aleph2_management_db_service/test/com/ikanow/aleph2/management_db/controllers/actors/actor_test.properties
+++ b/aleph2_management_db_service/test/com/ikanow/aleph2/management_db/controllers/actors/actor_test.properties
@@ -7,9 +7,8 @@ service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.da
 service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
 service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
-#service.SearchIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.ISearchIndexService
-#service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.MockElasticsearchIndexService
-
+service.SearchIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.ISearchIndexService
+service.SearchIndexService.service=com.ikanow.aleph2.management_db.controllers.actors.MockSearchIndexService
 # CONFIG
 # For testing
 CoreDistributedServices.application_name=DataImportManager
