Added shiro-guice and configured second realm for testing.

--- a/aleph2_core_security/pom.xml
+++ b/aleph2_core_security/pom.xml
@@ -147,10 +147,15 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-core</artifactId>
-            <version>1.1.0</version>
-        </dependency>
+		  <groupId>org.apache.shiro</groupId>
+		  <artifactId>shiro-core</artifactId>
+		  <version>1.2.4</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.apache.shiro</groupId>
+		  <artifactId>shiro-guice</artifactId>
+		  <version>1.2.4</version>
+		</dependency>        
         <!-- Shiro uses SLF4J for logging.  We'll use the 'simple' binding
              in this example app.  See http://www.slf4j.org for more info. -->
         <dependency>
