--- a/aleph2_core_security/test/shiro.ini
+++ b/aleph2_core_security/test/shiro.ini
@@ -23,3 +23,20 @@ lonestarr = vespa, goodguy, schwartz
 admin = *
 schwartz = lightsaber:*
 goodguy = winnebago:drive:eagle5
+
+[main]
+# Any realms here will automatically be added to the default created securityManager.  No need to define
+# a securityManager here unless you want to override the default. If you want to override the default, you would
+# do it by uncommenting this line and specifying the fully qualified class name of your SecurityManager implementation:
+# securityManager = my.domain.package.MySecurityManager
+
+# define the realm(s) we want to use for our application.  If you have more than one realm, the order in which they
+# are defined is the order in which they will be consulted during the authentication process.
+# This simple example uses only a single realm, but you could add more for more complicated requirements.
+
+# We'll use credentials hashing, since that keeps the users' credentials (passwords, private keys, etc) safe:
+#myRealmCredentialsMatcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
+
+# now define the realm, and specify that it use the above credentials matcher:
+#myRealm = MyRealm
+#myRealm.credentialsMatcher = $myRealmCredentialsMatcher
