--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -134,6 +134,12 @@
   	</dependency>
   	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
+  		<artifactId>aleph2_core_shared_library</artifactId>
+  		<version>${aleph2.version}</version>
+		<scope>${aleph2.scope}</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.ikanow.aleph2</groupId>
   		<artifactId>aleph2_management_db_service</artifactId>
   		<version>${aleph2.version}</version>
 		<scope>${aleph2.scope}</scope>
@@ -176,11 +182,6 @@
 	    <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
 	</dependency>
   	<dependency>
-  		<groupId>com.typesafe</groupId>
-  		<artifactId>config</artifactId>
-  		<version>1.3.0-M2</version>
-  	</dependency>
-  	<dependency>
   		<groupId>org.apache.hadoop</groupId>
   		<artifactId>hadoop-mapreduce-client-core</artifactId>
   		<version>2.7.0</version>
@@ -206,11 +207,6 @@
 		<artifactId>mockito-core</artifactId>
 		<version>1.10.19</version>
 		<scope>test</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.xeustechnologies</groupId>
-		<artifactId>jcl-core</artifactId>
-		<version>2.4</version>
 	</dependency>
   	<dependency>
   		<groupId>junit</groupId>
@@ -238,14 +234,6 @@
 	<artifactId>snakeyaml</artifactId>
 	<version>1.15</version>
 </dependency>
-
-
-<!--   	<dependency> -->
-<!--   		<groupId>aleph2_storm_samples</groupId> -->
-<!--   		<artifactId>aleph2_storm_samples</artifactId> -->
-<!--   		<version>0.0.1-SNAPSHOT</version> -->
-<!--   		<scope>test</scope> -->
-<!--   	</dependency> -->
   </dependencies>
   
 </project>
