--- a/aleph2_core_shared_library/pom.xml
+++ b/aleph2_core_shared_library/pom.xml
@@ -121,8 +121,9 @@
 	</dependency>
   	<dependency>
   		<groupId>org.apache.hadoop</groupId>
-  		<artifactId>hadoop-mapreduce-client-core</artifactId>
+  		<artifactId>hadoop-hdfs</artifactId>
   		<version>2.7.0</version>
+  		<scope>provided</scope>
   	</dependency>
    	<dependency>
   		<groupId>com.ikanow.aleph2</groupId>
