--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -185,6 +185,7 @@
   		<groupId>org.apache.hadoop</groupId>
   		<artifactId>hadoop-mapreduce-client-core</artifactId>
   		<version>2.7.0</version>
+  		<scope>provided</scope>
   	</dependency>
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
@@ -192,11 +193,6 @@
 		<version>2.7.0</version>
 		<scope>test</scope>
 		</dependency>
-  	<dependency>
-  		<groupId>com.google.inject</groupId>
-  		<artifactId>guice</artifactId>
-  		<version>3.0</version>
-  	</dependency>
   	<dependency>
   		<groupId>org.apache.hadoop</groupId>
   		<artifactId>hadoop-client</artifactId>
@@ -218,11 +214,6 @@
   <groupId>org.apache.storm</groupId>
   <artifactId>storm-core</artifactId>
   <version>0.9.3</version>
-</dependency>
-  	<dependency>
-	<groupId>jline</groupId>
-	<artifactId>jline</artifactId>
-	<version>2.11</version>
 </dependency>
 <dependency>
 	<groupId>org.apache.storm</groupId>
