--- a/aleph2_harvest_context_library/pom.xml
+++ b/aleph2_harvest_context_library/pom.xml
@@ -33,7 +33,11 @@
 		<version>0.7.2.201409121644</version>
 		<configuration>
 			<excludes>
+				<!-- (note that this appeared to fix a bamboo issue, but otherwise that "." construct appears to do nothing) -->
 				<exclude>**backtype.storm**</exclude>
+				<!--  This actually removes code from coveralls.io -->
+				<!-- This is external code pasted into aleph2 -->
+				<exclude>**/com/ikanow/aleph2/**/utils/LiveInjector*</exclude>
 			</excludes>
 		</configuration>
 		<executions>
