--- a/aleph2_analytics_context_library/pom.xml
+++ b/aleph2_analytics_context_library/pom.xml
@@ -120,6 +120,12 @@
   		<version>${aleph2.version}</version>
 		<scope>${aleph2.scope}</scope>
 	</dependency>
+  	<dependency>
+  		<groupId>com.ikanow.aleph2</groupId>
+  		<artifactId>aleph2_core_distributed_services_library</artifactId>
+  		<version>${aleph2.version}</version>
+		<scope>${aleph2.scope}</scope>
+	</dependency>
 	<!-- Other external dependencies here -->
   </dependencies>
 </project>
