--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
  - TEST_DIR=aleph2_core_security
 
 before_install:
- - cd test_dependencies && git pull origin master && cd ../aleph2_data_model && mvn install -DskipTests=true && cd ../aleph2_core_distributed_services_library && mvn install -DskipTests=true && cd ../test_dependencies/ && mvn install -DskipTests=true && cd ../
+ - cd test_dependencies && git pull origin master && cd ../aleph2_data_model && mvn install -DskipTests=true && cd ../aleph2_core_distributed_services_library && mvn install -DskipTests=true && cd ../aleph2_core_security && mvn install -DskipTests=true && cd ../test_dependencies/ && mvn install -DskipTests=true && cd ../
 
 script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test
 
