--- a/aleph2_management_db_service/pom.xml
+++ b/aleph2_management_db_service/pom.xml
@@ -167,11 +167,13 @@
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-hdfs</artifactId>
 		<version>2.7.0</version>
+		<scope>provided</scope>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-common</artifactId>
 		<version>2.7.0</version>
+		<scope>provided</scope>
 	</dependency>
   	<dependency>
   		<groupId>org.mockito</groupId>
