--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -6,6 +6,7 @@
   <properties>
 	<aleph2.scope>compile</aleph2.scope>
 	<aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
+	<aleph2.hadoop>2.6.0</aleph2.hadoop>
   </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -187,18 +188,18 @@
   	<dependency>
   		<groupId>org.apache.hadoop</groupId>
   		<artifactId>hadoop-mapreduce-client-core</artifactId>
-  		<version>2.7.0</version>
+  		<version>${aleph2.hadoop}</version>
   	</dependency>
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-minicluster</artifactId>
-		<version>2.7.0</version>
+  		<version>${aleph2.hadoop}</version>
 		<scope>test</scope>
 		</dependency>
   	<dependency>
   		<groupId>org.apache.hadoop</groupId>
   		<artifactId>hadoop-client</artifactId>
-  		<version>2.7.0</version>
+  		<version>${aleph2.hadoop}</version>
   		<scope>provided</scope>
   	</dependency>
 	<dependency>
