--- a/aleph2_management_db_service/pom.xml
+++ b/aleph2_management_db_service/pom.xml
@@ -6,6 +6,7 @@
   <properties>
 	<aleph2.scope>compile</aleph2.scope>
 	<aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
+	<aleph2.hadoop>2.6.0</aleph2.hadoop>
   </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -166,13 +167,13 @@
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-hdfs</artifactId>
-		<version>2.7.0</version>
+  		<version>${aleph2.hadoop}</version>
 		<scope>provided</scope>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-common</artifactId>
-		<version>2.7.0</version>
+  		<version>${aleph2.hadoop}</version>
 		<scope>provided</scope>
 	</dependency>
   	<dependency>
