ALEPH-31 More security service integration

--- a/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/harvest/actors/test_data_bucket_change.properties
+++ b/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/harvest/actors/test_data_bucket_change.properties
@@ -22,6 +22,8 @@ service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.da
 service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
 service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
+service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
+service.SecurityService.service=com.ikanow.aleph2.data_model.interfaces.shared_services.MockSecurityService
 # CONFIG
 # GLOBALS:
 #(insert these by hand)
