--- a/aleph2_harvest_context_library/pom.xml
+++ b/aleph2_harvest_context_library/pom.xml
@@ -9,7 +9,23 @@
   </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
+	<resources>
+		<resource>
+			<directory>src</directory>
+			<excludes>
+				<exclude>**/*.java</exclude>
+			</excludes>
+		</resource>
+	</resources>
     <testSourceDirectory>test</testSourceDirectory>
+	<testResources>
+		<testResource>
+			<directory>test</directory>
+			<excludes>
+				<exclude>**/*.java</exclude>
+			</excludes>
+		</testResource>
+	</testResources>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
