ALEPH-19 Trying to fix tests - is there a problem with kicking these threads off maybe? The contexts certainly don't need v1_enabled so no harm in trying

--- a/aleph2_streaming_enrichment_context_library/example_config_files/context_local_test.properties
+++ b/aleph2_streaming_enrichment_context_library/example_config_files/context_local_test.properties
@@ -35,7 +35,7 @@ globals.local_cached_jar_dir=file://temp/
 # MANAGEMENT DB: (note: dummy port)
 MongoDbManagementDbService.mongodb_connection=localhost:9999
 # For testing - should be removed
-MongoDbManagementDbService.v1_enabled=true
+MongoDbManagementDbService.v1_enabled=false
 # Full Search index service if enabled
 #ElasticsearchCrudService.elasticsearch_connection=localhost:4093
 # For testing
