--- a/aleph2_harvest_context_library/example_config_files/harvest_local_test.properties
+++ b/aleph2_harvest_context_library/example_config_files/harvest_local_test.properties
@@ -32,6 +32,6 @@ globals.local_cached_jar_dir=file://temp/
 # MANAGEMENT DB: (note: dummy port)
 MongoDbManagementDbService.mongodb_connection=localhost:9999
 # For testing - should be removed
-MongoDbManagementDbService.v1_enabled=true
+MongoDbManagementDbService.v1_enabled=false
 # For testing
 CoreDistributedServices.application_name="test"
