--- a/aleph2_data_import_manager/example_config_files/context_local_test.properties
+++ b/aleph2_data_import_manager/example_config_files/context_local_test.properties
@@ -35,7 +35,7 @@ globals.local_cached_jar_dir=file://temp/
 # MANAGEMENT DB: (note: dummy port)
 MongoDbManagementDbService.mongodb_connection=localhost:9999
 # For testing - should be removed
-MongoDbManagementDbService.v1_enabled=true
+MongoDbManagementDbService.v1_enabled=false
 # Full Search index service if enabled
 #ElasticsearchCrudService.elasticsearch_connection=localhost:4093
 # For testing
