--- a/aleph2_data_import_manager/example_config_files/v1_sync_service_eclipse.properties
+++ b/aleph2_data_import_manager/example_config_files/v1_sync_service_eclipse.properties
@@ -23,7 +23,10 @@ service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.serv
 service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
 service.SearchIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.ISearchIndexService
-service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.ElasticsearchIndexService
+service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.MockElasticsearchIndexService
+service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
+service.SecurityService.service=com.ikanow.aleph2.data_model.interfaces.shared_services.MockSecurityService
+
 # CONFIG
 # MANAGEMENT DB:
 MongoDbManagementDbService.mongodb_connection=localhost:4017
