ALEPH-31 Added: Sessionstorage enabled=false

--- a/aleph2_core_security/src/shiro.ini
+++ b/aleph2_core_security/src/shiro.ini
@@ -40,3 +40,6 @@ goodguy = winnebago:drive:eagle5
 # now define the realm, and specify that it use the above credentials matcher:
 #myRealm = MyRealm
 #myRealm.credentialsMatcher = $myRealmCredentialsMatcher
+
+#prevent session storage
+securityManager.subjectDAO.sessionStorageEvaluator.sessionStorageEnabled = false
