ALEPH-31 Test and fix for session timeout

--- a/aleph2_core_security/src/shiro.ini
+++ b/aleph2_core_security/src/shiro.ini
@@ -43,3 +43,4 @@ goodguy = winnebago:drive:eagle5
 
 #prevent session storage
 securityManager.subjectDAO.sessionStorageEvaluator.sessionStorageEnabled = false
+securityManager.sessionManager.globalSessionTimeout = 2000
