--- a/aleph2_core_shared_library/pom.xml
+++ b/aleph2_core_shared_library/pom.xml
@@ -126,6 +126,12 @@
 	</dependency>
   	<dependency>
   		<groupId>org.apache.hadoop</groupId>
+  		<artifactId>hadoop-common</artifactId>
+  		<version>${aleph2.hadoop}</version>
+  		<scope>provided</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.hadoop</groupId>
   		<artifactId>hadoop-client</artifactId>
   		<version>${aleph2.hadoop}</version>
   		<scope>test</scope>
