ALEPH-31 Added mock security context everywhere that uses core mgmt db

--- a/aleph2_data_import_manager/example_config_files/context_local_test.properties
+++ b/aleph2_data_import_manager/example_config_files/context_local_test.properties
@@ -24,6 +24,8 @@ service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interface
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
 service.SearchIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.ISearchIndexService
 service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.MockElasticsearchIndexService
+service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
+service.SecurityService.service=com.ikanow.aleph2.data_model.interfaces.shared_services.MockSecurityService
 #service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.ElasticsearchIndexService
 #?CUSTOM:
 service.test.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
