--- a/aleph2_management_db_service/test/com/ikanow/aleph2/management_db/controllers/actors/actor_test.properties
+++ b/aleph2_management_db_service/test/com/ikanow/aleph2/management_db/controllers/actors/actor_test.properties
@@ -24,6 +24,8 @@ service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interface
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
 service.SearchIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.ISearchIndexService
 service.SearchIndexService.service=com.ikanow.aleph2.management_db.controllers.actors.MockSearchIndexService
+service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
+service.SecurityService.service=com.ikanow.aleph2.data_model.interfaces.shared_services.MockSecurityService
 # CONFIG
 # For testing
 CoreDistributedServices.application_name=DataImportManager
