--- a/aleph2_core_security/pom.xml
+++ b/aleph2_core_security/pom.xml
@@ -164,5 +164,15 @@
             <version>1.6.1</version>
             <scope>test</scope>
         </dependency>		
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-ehcache</artifactId>
+			<version>1.2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>2.10.0</version>
+		</dependency>
 	</dependencies>
 </project>
