Added analytics context library to POM

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>aleph2_core_distributed_services_library</module>
         <module>aleph2_access_manager</module>
         <module>aleph2_harvest_context_library</module>
+        <module>aleph2_analytics_context_library</module>
         <module>aleph2_streaming_enrichment_context_library</module>
         <module>aleph2_data_analytics_manager</module>
         <module>aleph2_data_import_manager</module>
