--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
  - TEST_DIR=aleph2_core_distributed_services_library
  - TEST_DIR=aleph2_core_shared_library
  - TEST_DIR=aleph2_harvest_context_library
+ - TEST_DIR=aleph2_analytics_context_library
  - TEST_DIR=aleph2_streaming_enrichment_context_library
  - TEST_DIR=aleph2_management_db_service
  - TEST_DIR=aleph2_data_import_manager
