--- a/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/stream_enrichment/actors/test_data_bucket_change.properties
+++ b/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/stream_enrichment/actors/test_data_bucket_change.properties
@@ -26,8 +26,8 @@ service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interface
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
 service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
 service.SecurityService.service=com.ikanow.aleph2.data_model.interfaces.shared_services.MockSecurityService
-service.StreamingEnrichment.interface=com.ikanow.aleph2.data_model.interfaces.data_analytics.IAnalyticsTechnologyService
-service.StreamingEnrichment.service=com.ikanow.aleph2.analytics.storm.services.MockStormAnalyticTechnologyService
+service.StreamingEnrichmentService.interface=com.ikanow.aleph2.data_model.interfaces.data_analytics.IAnalyticsTechnologyService
+service.StreamingEnrichmentService.service=com.ikanow.aleph2.analytics.storm.services.MockStormAnalyticTechnologyService
 # CONFIG
 # GLOBALS:
 #(insert these by hand)
