--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
  - TEST_DIR=aleph2_core_security
 
 before_install:
- - mvn install -f dependency_pom.xml -DskipTests=true && cd test_dependencies && git pull origin master && mvn install -DskipTests=true && cd ../
+ - mvn install -f dependency_pom.xml -DskipTests=true && cd test_dependencies && git pull origin september_2015_release_inc_patches_v2.3 && mvn install -DskipTests=true && cd ../
 
 script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test
 
