--- a/aleph2_core_security/pom.xml
+++ b/aleph2_core_security/pom.xml
@@ -169,10 +169,10 @@
 			<artifactId>shiro-ehcache</artifactId>
 			<version>1.2.4</version>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
 			<version>2.10.0</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 </project>
