ALEPH-53 Refactoring Secuirty Service caching layer, move to core.

--- a/aleph2_core_security/test/test_core_security.properties
+++ b/aleph2_core_security/test/test_core_security.properties
@@ -21,14 +21,14 @@
 #service.ManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
 #service.ManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
 #service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.IManagementDbService
-#service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
+#service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.mongodb.services.MockMongoDbManagementDbService
 #service.SearchIndexService.interface=com.ikanow.aleph2.data_model.interfaces.data_services.ISearchIndexService
 #service.SearchIndexService.service=com.ikanow.aleph2.search_service.elasticsearch.services.MockElasticsearchIndexService
 service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
-service.SecurityService.service=com.ikanow.aleph2.security.service.SecurityService
-# CONFIG
+service.SecurityService.service=com.ikanow.aleph2.security.service.MockSecurityService
+#CONFIG:
 # GLOBALS:
 #(insert these by hand)
 #globals.local_root_dir=TEST_IS_OVERRIDDEN
-# MANAGEMENT DB:
+#MANAGEMENT DB:
 #MockMongoDbCrudServiceFactory.one_per_thread=false
