ALEPH-12 More wiring up for batch enrichment

--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -184,6 +184,12 @@
   		<version>${aleph2.version}</version>
 		<scope>test</scope>
   	</dependency>  	
+   	<dependency>
+  		<groupId>com.ikanow.aleph2</groupId>
+  		<artifactId>aleph2_analytic_services_hadoop</artifactId>
+  		<version>${aleph2.version}</version>
+		<scope>test</scope>
+  	</dependency>  	
 	<dependency>
 	    <groupId>jdk.tools</groupId>
 	    <artifactId>jdk.tools</artifactId>
