--- a/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/stream_enrichment/actors/test_data_bucket_change.properties
+++ b/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/stream_enrichment/actors/test_data_bucket_change.properties
@@ -28,6 +28,8 @@ service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared
 service.SecurityService.service=com.ikanow.aleph2.data_model.interfaces.shared_services.MockSecurityService
 service.StreamingEnrichmentService.interface=com.ikanow.aleph2.data_model.interfaces.data_analytics.IAnalyticsTechnologyService
 service.StreamingEnrichmentService.service=com.ikanow.aleph2.analytics.storm.services.MockStormAnalyticTechnologyService
+service.BatchEnrichmentService.interface=com.ikanow.aleph2.data_model.interfaces.data_analytics.IAnalyticsTechnologyService
+service.BatchEnrichmentService.service=com.ikanow.aleph2.analytics.hadoop.services.MockHadoopAnalyticTechnologyService
 # CONFIG
 # GLOBALS:
 #(insert these by hand)
