Aleph-53 Added SecurityCachingInvalidationSingletonActor.

--- a/aleph2_core_security/pom.xml
+++ b/aleph2_core_security/pom.xml
@@ -140,6 +140,12 @@
 			<version>${aleph2.version}</version>
 			<scope>${aleph2.scope}</scope>
 		</dependency>
+	  	<dependency>
+	  		<groupId>com.ikanow.aleph2</groupId>
+	  		<artifactId>aleph2_core_distributed_services_library</artifactId>
+	  		<version>${aleph2.version}</version>
+			<scope>${aleph2.scope}</scope>
+	  	</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
