--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -18,6 +18,15 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-javadoc-plugin</artifactId>
+		<version>2.10.3</version>
+		<configuration>
+		    <additionalparam>-Xdoclint:none</additionalparam>	
+			<reportOutputDirectory>apidocs</reportOutputDirectory>
+		</configuration>
+	</plugin>
       <plugin>
       	<groupId>org.eluder.coveralls</groupId>
       	<artifactId>coveralls-maven-plugin</artifactId>
