--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -5,6 +5,8 @@
   <version>${aleph2.version}</version>
   <properties>
 	<aleph2.version>0.0.1-SNAPSHOT</aleph2.version>
+	<!-- Jackson needs to stay at 2.3.x for compatibility with Storm in HDP 2.3 -->
+	<jackson.version>2.3.1</jackson.version>
   </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -129,12 +131,12 @@
   	<dependency>
   		<groupId>com.fasterxml.jackson.core</groupId>
   		<artifactId>jackson-core</artifactId>
-  		<version>2.5.2</version>
+  		<version>${jackson.version}</version>
  	</dependency>
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>2.5.2</version>
+  		<version>${jackson.version}</version>
     </dependency>
   	<dependency>
   		<groupId>com.google.guava</groupId>
